# TrackingCameraSpeaker

./: .gitmodules  CMakeLists.txt  DllMethods.h  README.md  TCSDll_UserExample.cpp  TCS_UserExample.cpp  TrackingSpeaker.cpp  TrackingSpeaker.h  TrackingSpeaker.hpp  readme.md  worTCSConfig.cmake
DirectlyWinAPI_ImportExample/: DllMethods.h  TCS_Dll_WinAPI_UserExample.cpp
Wrapper/: TrackingCameraSpeakerWrapper.cpp  TrackingCameraSpeakerWrapper.h  TrackingCameraSpeakerWrapper.hpp
include/freeD/: CameraData.hpp  FreedPacket.hpp  PartialBuffer.hpp
include/socket/: BaseSocket.hpp  ServerDependencies.hpp  ServerUdpSocket.hpp  SocketInfo.hpp
include/speaker/: TrackingCameraSpeaker.hpp
include/vector/: Vector.hpp  Vector3.hpp
include/wrapper/: TCSWrapper.hpp
lib/FreeD/: CameraData.cpp  CameraData.h  CameraData.hpp  FreedPacket.cpp  FreedPacket.h  FreedPacket.hpp  PartialBuffer.cpp  PartialBuffer.h  PartialBuffer.hpp
lib/Socket/: BaseSocket.cpp  BaseSocket.h  BaseSocket.hpp  ServerUdpSocket.cpp  ServerUdpSocket.h  ServerUdpSocket.hpp
src/: DllEntryPoint.cpp
src/freeD/: CameraData.cpp  FreedPacket.cpp  PartialBuffer.cpp
src/socket/: BaseSocket.cpp  ServerDependencies.cpp  ServerUdpSocket.cpp  SocketInfo.cpp
src/speaker/: TrackingCameraSpeaker.cpp
src/wrapper/: TCSWrapper.cpp
worTrackingSpeaker/: CMakeLists.txt
worTrackingSpeaker/include/FreeD/: CameraData.hpp  FreedPacket.hpp  PartialBuffer.hpp
worTrackingSpeaker/include/Socket/: BaseSocket.hpp  ServerDependencies.hpp  ServerUdpSocket.hpp
worTrackingSpeaker/src/FreeD/: CameraData.cpp  FreedPacket.cpp  PartialBuffer.cpp
worTrackingSpeaker/src/Socket/: BaseSocket.cpp  ServerDependencies.cpp  ServerUdpSocket.cpp
